# sigmeta

./: AUDIT.md  Dockerfile  INTEGRATIONS.md  INTEROP.md  README.md  ROADMAP.md  install.ps1  install.sh  layman.md  pyproject.toml
.github/workflows/: ci.yml
demos/01-basic/: SCENARIO.md
demos/02-airband-scan/: SCENARIO.md
demos/03-ism-survey/: SCENARIO.md
demos/04-hf-utility/: SCENARIO.md
demos/05-empty-strict/: SCENARIO.md
demos/06-marine-vhf/: SCENARIO.md
demos/07-pmr-landmobile/: SCENARIO.md
demos/08-satellite-downlink/: SCENARIO.md
demos/09-mixed-units-csv/: SCENARIO.md
deploy/: docker-compose.yml  k8s.yaml
deploy/terraform/: main.tf
docs/: ADVANCED.md  ARCHITECTURE.md  DEPLOY.md  INSTALL.md
examples/: help.txt  version.txt
integrations/: webhook.py
ports/: README.md
ports/go/: go.mod  main.go
ports/javascript/: index.js  package.json
ports/rust/: Cargo.toml
ports/rust/src/: main.rs
sigmeta/: __init__.py  __main__.py  cli.py  connect.py  core.py  mcp_server.py
tests/: test_connect.py  test_hardening.py  test_smoke.py
